# component-demos

./: .gitignore  README.md  build.sh  install_wasi_sdk.sh  justfile  web.wit
attribute-churn/: Cargo.toml
attribute-churn/src/: lib.rs
attribute-churn/wit/: world.wit
c/calculator/: build.sh
c/greet-bindgen/: build.sh  greet.c
c/greet-freestanding/: build.sh  greet.c  greet.wit
c/greet-libc/: build.sh  greet.c
c/hello-world/: build.sh  main.c
canvas-draw/wit/: world.wit
canvas-pixels/wit/: world.wit
cpp/: unwitting-bindgen.sh  utils.h
cpp/dom-traversal/: build.sh
cpp/dom-traversal/component/: build.sh  main.cpp
cpp/dom-traversal/emscripten/: build.sh  main.cpp
cpp/hello-world/: build.sh  main.cpp
cpp/hello-world/wit/: world.wit
dom-query/src/: lib.rs
dom-traversal/: Cargo.toml
dom-traversal/wit/: world.wit
hello-world/: Cargo.toml
hello-world/src/: lib.rs
rust/: Cargo.toml
rust/attribute-churn/: Cargo.toml  build.sh
rust/attribute-churn/src/: lib.rs
rust/attribute-churn/wit/: world.wit
rust/calculator/: Cargo.toml  build.sh
rust/calculator-raw/: Cargo.toml  build.sh  calculator.wit
rust/calculator-raw/.cargo/: config.toml
rust/calculator-raw/src/: lib.rs
rust/calculator/src/: lib.rs
rust/canvas-draw/: Cargo.toml  build.sh
rust/canvas-draw/src/: lib.rs
rust/canvas-draw/wit/: world.wit
rust/canvas-pixels/: Cargo.toml  build.sh
rust/canvas-pixels/src/: lib.rs
rust/canvas-pixels/wit/: world.wit
rust/dom-query/: Cargo.toml  build.sh  dom-query.wit
rust/dom-query/src/: lib.rs
rust/dom-query/wit/: dom-query.wit  world.wit
rust/dom-traversal/: Cargo.toml  build.sh
rust/dom-traversal/src/: lib.rs
rust/dom-traversal/wit/: world.wit
rust/hello-world/: Cargo.toml  build.sh
rust/hello-world/src/: lib.rs
rust/hello-world/wit/: world.wit
rust/string-marshalling/: Cargo.toml  build.sh
rust/string-marshalling/src/: lib.rs
rust/string-marshalling/wit/: world.wit
rust/table-rows/: Cargo.toml  build.sh
rust/table-rows/src/: lib.rs
rust/table-rows/wit/: world.wit
rust/table-update/: Cargo.toml  build.sh
rust/table-update/src/: lib.rs
rust/table-update/wit/: world.wit
rust/todomvc/: Cargo.toml  build.sh
rust/todomvc/src/: lib.rs
rust/todomvc/wit/: world.wit
rust/vdom-diff/: Cargo.toml  build.sh
rust/vdom-diff/src/: lib.rs
rust/vdom-diff/wit/: world.wit
rust/web/: dom-traversal.html  todomvc.html
rust/web/src/: dom-query-main.js  vdom-diff-main.js
string-marshalling/: Cargo.toml
string-marshalling/wit/: world.wit
todomvc/: Cargo.toml
todomvc/src/: lib.rs
todomvc/wit/: world.wit
vdom-diff/: Cargo.toml
vdom-diff/src/: lib.rs
vdom-diff/wit/: world.wit
web/: attribute-churn.html  canvas-draw.html  canvas-pixels.html  dom-query.html  hello.html  index.html  package-lock.json  package.json  string-marshalling.html  style.css  table-rows.html  transpile.sh  vdom-diff.html  vite.config.js
web/c/calculator/: index.html  main.js
web/c/greet-bindgen/: index.html  main.js
web/c/greet-freestanding/: index.html
web/c/greet-libc/: index.html  main.js
web/c/hello-world/: index.html
web/cpp/dom-traversal/: index.html  main.js
web/host/: common.js  loader.js  web-host.js  web-native.js
web/rust/attribute-churn/: index.html  main.js
web/rust/calculator/: index.html
web/rust/calculator-raw/: index.html  main.js
web/rust/canvas-draw/: index.html  main.js
web/rust/canvas-pixels/: index.html  main.js
web/rust/dom-query/: index.html  main.js
web/rust/dom-traversal/: index.html  main.js
web/rust/hello-world/: index.html  main.js
web/rust/string-marshalling/: index.html  main.js
web/src/: attribute-churn-main.js  canvas-draw-main.js  canvas-pixels-main.js  dom-traversal-main.js  hello-main.js  string-marshalling-main.js  table-rows-main.js  todomvc-main.js
(+8 files in other folders)
