[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.57", default-features = false, features = ["macros"] }
dlmalloc = { version = "0.2", features = ["global"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
