[package]
name = "string-marshalling"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "=0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "demos:string-marshalling"

[package.metadata.component.target]
world = "string-marshalling"
path = "wit"

[package.metadata.component.target.dependencies]
"webidl:baseline" = { path = "../../web.wit" }

[package.metadata.component.dependencies]
